# notebook-generator-backend

./: .gitignore  README.md  config.py  generate.py  index_data.py  main.py  pyproject.toml  start.py
src/generate_notebooks/: models.py  router.py  utils.py
src/index_data/: models.py  router.py  utils.py
