[tool.poetry]
name = "notebook-generator-backend"
version = "0.1.0"
description = ""
authors = ["Naren <narensreekanth@gmail.com>"]
readme = "README.md"
packages = [{include = "*", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.0"}
pydantic = "^2.9.2"
transformers = "^4.45.2"
sentence-transformers = "^3.2.0"
faiss-cpu = "^1.9.0"
numpy = "^2.1.2"
torch = "^2.5.0"
openai = "^1.52.0"
pinecone = "^5.3.1"
nbformat = "^5.10.4"

[tool.poetry.scripts]
start = "start:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
